Feat : canvas 기본 세팅 후 drawCircles 기능 구현

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MAKING ARTISTIC DESSERT | NUDAKE</title>
     <link rel="stylesheet" href="./style.css" />
+    <script defer src="smudge.js"></script>
   </head>
   <body>
     <header class="header">
       <div class="header__wrapper">
-        <img src="./img/logo_nudake.png" alt="누데이크" />
+        <a href="/">
+          <img src="./images/logo_nudake.png" alt="누데이크" />
+        </a>
         <div class="header__wrapper--right">
           <span
             >making new fantasies <br />
@@ -18,10 +21,10 @@
           >
           <div class="sns">
             <a class="sns__instagram" href="javascript:void(0)"
-              ><img src="./img/sns_instagram.png" alt="인스타그램"
+              ><img src="./images/sns_instagram.png" alt="인스타그램"
             /></a>
             <a class="sns__youtube" href="javascript:void(0)"
-              ><img src="./img/sns_youtube.png" alt="유튜브"
+              ><img src="./images/sns_youtube.png" alt="유튜브"
             /></a>
           </div>
         </div>
@@ -29,15 +32,17 @@
     </header>
     <main class="main">
       <span class="guide">smudge to reveal</span>
-      <canvas></canvas>
+      <div class="nudake">
+        <canvas></canvas>
+      </div>
     </main>
     <footer class="footer">
       <div class="sns">
         <a class="sns__instagram" href="javascript:void(0)"
-          ><img src="./img/sns_instagram.png" alt="인스타그램"
+          ><img src="./images/sns_instagram.png" alt="인스타그램"
         /></a>
         <a class="sns__youtube" href="javascript:void(0)"
-          ><img src="./img/sns_youtube.png" alt="유튜브"
+          ><img src="./images/sns_youtube.png" alt="유튜브"
         /></a>
       </div>
     </footer>
