--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MAKING ARTISTIC DESSERT | NUDAKE</title>
     <link rel="stylesheet" href="./style.css" />
-    <script defer src="smudge.js"></script>
+    <script type="module" defer src="./js/smudge.js"></script>
   </head>
   <body>
     <header class="header">
