Feat : GSAP을 통해 guide와 progress 구현 및 애니메이션 적용

--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
       referrerpolicy="no-referrer"
     ></script>
     <script type="module" defer src="./js/smudge.js"></script>
+    <script defer src="./js/guideAnimation.js"></script>
   </head>
   <body>
     <header class="header">
       <div class="header__wrapper">
         <a href="/">
-          <img src="./images/logo_nudake.png" alt="누데이크" />
+          <img class="logo" src="./images/logo_nudake.png" alt="누데이크" />
         </a>
         <div class="header__wrapper--right">
           <span
@@ -44,6 +45,9 @@
     </header>
     <main class="main">
       <span class="guide">smudge to reveal</span>
+      <div class="progress-bar">
+        <div class="gage"></div>
+      </div>
       <div class="nudake">
         <canvas></canvas>
       </div>
