Update : og, favicon 등 meta 태그 업데이트

--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
+    <meta
+      name="description"
+      content="MAKING NEW FANTASIES THROUGH ARTISTIC DESSERT"
+    />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="MAKING ARTISTIC DESSERT | Nudake" />
+    <meta property="og:image" content="./images/og.jpg" />
+    <meta
+      property="og:description"
+      content="MAKING NEW FANTASIES THROUGH ARTISTIC DESSERT"
+    />
+    <meta property="og:url" content="https://nudake.com" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <title>MAKING ARTISTIC DESSERT | NUDAKE</title>
     <link rel="stylesheet" href="./style.css" />
     <script
@@ -45,6 +57,7 @@
     </header>
     <main class="main">
       <span class="guide">smudge to reveal</span>
+      <div class="dim"></div>
       <div class="progress-bar">
         <div class="gage"></div>
       </div>
