--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       property="og:description"
       content="MAKING NEW FANTASIES THROUGH ARTISTIC DESSERT"
     />
-    <meta property="og:url" content="https://nudake.com" />
+    <meta property="og:url" content="https://nudake-canvas.vercel.app/" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <title>MAKING ARTISTIC DESSERT | NUDAKE</title>
     <link rel="stylesheet" href="./css/style.css" />
